# mod3d

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASES.md
base/: Cargo.toml  RELEASES.md
base/src/: buffer_data.rs  buffer_data_accessor.rs  buffer_descriptor.rs  buffer_index_accessor.rs  byte_buffer.rs  hierarchy.rs  lib.rs  object.rs  texture.rs  traits.rs  types.rs  vertices.rs
base/src/example_client/: renderable.rs
base/src/example_objects/: example_vertices.rs  tetrahedron.rs  triangle.rs
base/tests/: test_object.rs
gl/: Cargo.toml  README.md  RELEASES.md
gl/src/: buffer.rs  lib.rs  opengl.rs  pipeline.rs  shader_instantiable.rs  traits.rs  vertices.rs  webgl.rs  webgl_log.rs
gl/src/opengl/: buffer.rs  program.rs  shader.rs  texture.rs  utils.rs  vao.rs
gl/src/webgl/: buffer.rs  program.rs  shader.rs  texture.rs  vao.rs
gl_sdl_example/: Cargo.toml  README.md  RELEASES.md
gl_sdl_example/src/: cmdline.rs  main.rs  model.rs  objects.rs  sdl_window.rs  shader_program.rs  types.rs  utils.rs
gl_wasm_example/: Cargo.toml  README.md  RELEASES.md  gltf_viewer.js
gl_wasm_example/src/: inner.rs  lib.rs  model.rs  objects.rs
gl_wgpu_example/: Cargo.toml  README.md  RELEASES.md
gl_wgpu_example/src/: main.rs  model.rs  objects.rs  pipeline.rs  shader_instantiable.rs  shader_program.rs  types.rs  utils.rs  wgpu.rs  wgpu_window.rs
gl_wgpu_example/src/wgpu/: buffer.rs  index_buffer.rs  vertex_buffer.rs
gltf/: .gitignore  Cargo.toml  README.md  RELEASES.md
gltf/src/: buffers_accessors.rs  deserialize.rs  gltf.rs  material.rs  object_data.rs  primitives_meshes.rs  serialize.rs  types.rs
shapes/: Cargo.toml  README.md  RELEASES.md
shapes/src/: icosphere.rs  main.rs  mesh_set.rs  rectangle.rs  types.rs
src/: lib.rs
